# Client_Multithreaded_Programming

./: CMakeLists.txt
include/: ChatWindow.h  ChatWindowUi.h  CommandHandler.h  ConnectionDialogWindow.h  ConnectionDialogWindowUi.h  RoomSelectorWindow.h  RoomSelectorWindowUi.h  WebSocketClient.h
src/: ChatWindow.cpp  ChatWindow.ui  ConnectionDialogWindow.cpp  ConnectionDialogWindow.ui  RoomSelectorWindow.cpp  RoomSelectorWindow.ui  WebSocketClient.cpp  main.cpp  resources.qrc
src/styles/: chatWindow.qss  connectionDialogWindow.qss  roomSelectorWindow.qss
tests/: CMakeLists.txt  TestSocketConnection.cpp  TestWebSocketClient.h  main.cpp
